removed clutter and finished confidence intervals draft

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -2,7 +2,7 @@
 :after,
 :before {
 	box-sizing: border-box;
-	background-color: inherit;
+	// background-color: inherit;
 	color: inherit;
 	margin: 0;
 	padding: 0;
