--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@ layout: compress
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
- <!-- Global site tag (gtag.js) - Google Analytics -->
- <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EP7KLCYVP"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EP7KLCYVP"></script>
  <script>
    window.dataLayer = window.dataLayer || [];
    function gtag() { dataLayer.push(arguments); }
@@ -23,7 +23,7 @@ layout: compress
     {% include anchor_headings.html html=content anchorBody="#" %}
   </main>
 
-  
+
 
   <script>
     function setTheme(theme) {
@@ -60,29 +60,29 @@ layout: compress
 
 
 </body>
-
+<!-- 
 <footer class="social-footer">
   <div class="social-footer-icons">
     <a href="{{site.url}}/atom.xml" title="Feed RSS" target="_blank" rel="noopener noreferrer"><i
         class="fa fa-rss" aria-hidden="true"></i></a>
   </div>
-</footer>
+</footer> -->
 
 
 {% if page.url == '/' %}
-  <script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.js"></script>
-  <script>
-    var sjs = SimpleJekyllSearch({
-      searchInput: document.getElementById('search-input'),
-      resultsContainer: document.getElementById('search-results'),
-      json: '{{ site.baseurl }}/search.json',
-      searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>',
-      noResultsText: 'No results found..',
-      limit: 10,
-      fuzzy: true,
-    })
-  </script>
-  {% endif %}
+<script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.js"></script>
+<script>
+  var sjs = SimpleJekyllSearch({
+    searchInput: document.getElementById('search-input'),
+    resultsContainer: document.getElementById('search-results'),
+    json: '{{ site.baseurl }}/search.json',
+    searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>',
+    noResultsText: 'No results found..',
+    limit: 10,
+    fuzzy: true,
+  })
+</script>
+{% endif %}
 
 
 </html>
